# legacymod

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  legacymod.toml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md
samples/estate/bms/: PAYMAP.bms
samples/estate/cics/: PAYCSD.txt
samples/estate/cobol/: BROKEN.cbl  OLDPURGE.cbl  ORPHAN.cbl  PAYCALC.cbl  PAYIMS.cbl  PAYINQ.cbl  PAYNOTIF.cbl
samples/estate/ddl/: PAYDB.sql
samples/estate/easytrieve/: PAYLIST.ezt
samples/estate/hpns/: PAYSRV.cob
samples/estate/ims/: EMPDBD.dbd  PAYPSB.psb
samples/estate/jcl/: OLDPURGE.jcl  PAYROLL.jcl  VSAMDEF.jcl  XFERJOB.jcl
samples/estate/mq/: PAYMQ.mqsc
samples/estate/rexx/: CLEANUP.rexx
samples/estate/scheduler/: ca7_schedule.txt  (+1 more)
samples/ops/: capabilities.csv  dataset_stats.csv  job_runs.csv
src/legacymod/: __init__.py  assess.py  cli.py  codegen.py  config.py  datamig.py  decompose.py  docsgen.py  flows.py  graph.py  interfaces.py  inventory.py  opsdata.py  recommend.py  reconcile.py  report.py  review.py  rules.py  slice.py  specgen.py  store.py  validate.py
templates/airflow_dag/: dag.py.j2
templates/docs/: spec.md.j2
templates/java_service/: CharacterizationTest.java.j2  Controller.java.j2  Entity.java.j2  README.md.j2  Service.java.j2
templates/openapi/: openapi.yaml.j2
tests/: conftest.py  test_cli.py  test_phase1.py  test_phase2.py  test_phase2b.py  test_phase3.py  test_phase4.py  test_phase4b.py  test_phase5.py  test_phase6.py  test_phase6b.py  test_phase7.py  test_recommend.py
(+27 files in other folders)
