[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legacymod"
version = "0.2.0"
description = "Local-first, auditable mainframe-modernization platform: inventory, knowledge graph, rule mining, decomposition, specs, skeleton codegen, behavior-first validation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "legacymod contributors" }]
keywords = ["mainframe", "cobol", "modernization", "jcl", "cics", "db2"]
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
excel = ["openpyxl>=3.1"]

[project.scripts]
legacymod = "legacymod.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legacymod = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
